# CIM

./: .gitignore  README.md  environment-v3.yaml  environment.yaml  pyproject.toml  requirements.txt  test.py
configs/: config.py  config_collector.py  config_policy.py
configs/hydra/: default.yaml
src/: test.py  train.py
src/data/: collector.py
src/envs/: env_gym.py  env_maze.py  make_venv.py  venvs.py
src/envs/wrappers/: __init__.py  action_repeat.py  sparse_reward.py  venv_wrappers.py
src/policy/: __init__.py  cim.py  ppo.py
src/trainer/: onpolicy.py
src/utils/: common.py  logger.py  net.py
