[project]
requires-python = ">=3.9"

[tool.ruff]
line-length = 120
cache-dir = "~/.cache/ruff"
src = ["src"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
    "B028", # warning without explicit stacklevel
    "C408", # dict() calls (stylistic)
    "C901", # function complexity
    "E501",
    "E731",
    "I001",
    "F401",
]
extend-select = ["E", "F", "I", "W", "UP", "B", "T", "C"]

[tool.ruff.lint.per-file-ignores]
# Allow prints in auxiliary scripts
"benchmark/*.py" = ["T201"]
"examples/*.py" = ["T201"]
"scripts/*.py" = ["T201"]
"*.ipynb" = ["T201"]
"utils/*.py" = ["T201"]
"**/envs/*.py" = ["T201"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["src", "trl"]

[tool.ruff.format]
skip-magic-trailing-comma = true
